# flappy_bird

./: CMakeLists.txt
src/: controller.cpp  controller.h  main.cpp  state.h
src/model/: model.cpp  model.h
src/model/body/: bird.cpp  bird.h  body.cpp  body.h  pipe.cpp  pipe.h
src/model/factory/: factory.h  simple_factory.cpp  simple_factory.h
src/view/: gl_view.cpp  gl_view.h  view.h
